# test_tasks

Company_of_world_test/: .gitignore  README.md  full_requirements.txt  requiremetns.txt  weather_bot.py
Company_of_world_test/api/: serializers.py  urls.py  utilities.py  views.py
Company_of_world_test/city/: admin.py  models.py
Company_of_world_test/city/migrations/: 0001_initial.py  0002_alter_city_options.py  0003_alter_city_latitude_alter_city_longitude_and_more.py  0004_alter_city_name.py  0005_alter_city_name_city_unique_city.py
Company_of_world_test/config/: asgi.py  settings.py  urls.py  wsgi.py
Company_of_world_test/data/: spisok_gorodov_RU.xlsx
Company_of_world_test/infra/: .env_example
Company_of_world_test/tests/: factory.py  test_commands.py  test_models.py  test_urls.py  test_utilities.py  test_views.py
TeamUp/: README.MD
TeamUp/my_rocket/: manage.py
TeamUp/my_rocket/my_rocket/: asgi.py  settings.py  urls.py  (+1 more)
TeamUp/poetry_dir/: pyproject.toml
abonent_test/: README.md
abonent_test/factory/: Dockerfile  requirements.txt
abonent_test/infra/: docker-compose.yaml
ad_board_test/: .gitignore  LICENSE  README.md
ad_board_test/app/: Dockerfile  requirements.txt
ad_board_test/infra/: .env-example  docker-compose.yml
blitz_project/: README.md  requirements.txt
blitz_project/excel/: export_from_excel.py
blitz_project/pdf/: export_from_pdf.py
link_academy/: index.html  style.css
news_feed/: README.md
news_feed/backend/: Dockerfile  requirements.txt
news_feed/infra/: docker-compose.yml
valhmor_test/data/: items_updated.csv
(+63 files in other folders)
