[tool.poetry]
name = "poetry_dir"
version = "0.1.0"
description = ""
authors = ["Новиков Максим <maxom.nowik@yandex.ru>"]
readme = "README.md"
packages = [{include = "poetry_dir"}]

[tool.poetry.dependencies]
python = "~3.10"
django = "~3.2"
djangorestframework = "^3.14"
drf-yasg = "^1.21.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
